# weatherbot

./: .env.example  .gitignore  README.md  pyproject.toml
src/polybot_weather/: __init__.py  analysis.py  cli.py  config.py
src/polybot_weather/edge/: kelly.py  value.py
src/polybot_weather/execution/: trader.py  wallet.py
src/polybot_weather/polymarket/: clob.py  gamma.py  parsers.py  rate_limiter.py
src/polybot_weather/probability/: bins.py  calibration.py  climatology.py  ensemble.py
src/polybot_weather/reporting/: dashboard.py  tui.py
src/polybot_weather/storage/: models.py  repo.py
src/polybot_weather/training/: __init__.py  backtester.py  calibrator.py  resolver.py
src/polybot_weather/weather/: cache.py  nhc.py  nws.py  openmeteo.py  stations.py
tests/: test_bins.py  test_edge.py  test_ensemble.py  test_parsers.py  test_training.py
