[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polybot-weather"
version = "0.1.0"
description = "Analysis and recommendation bot for weather prediction markets on Polymarket"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pytz>=2024.1",
    "py-clob-client>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "respx>=0.20.0",
]

[project.scripts]
polybot = "polybot_weather.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/polybot_weather"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["polybot_weather.probability.*", "polybot_weather.edge.*"]
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short"]
markers = [
    "integration: tests requiring real API calls",
    "slow: tests that take more than 1s",
]

[tool.coverage.run]
source = ["src/polybot_weather"]
omit = ["*/tests/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
